i18n/ja/docusaurus-plugin-content-docs/version-12.x/boost.md
<!-- # Laravel Boost -->
# Laravel Boost

- [Introduction](#introduction)
- [Installation](#installation)
    - [Keeping Boost Resources Updated](#keeping-boost-resources-updated)
    - [Set Up Your Agents](#set-up-your-agents)
- [MCP Server](#mcp-server)
    - [Available MCP Tools](#available-mcp-tools)
    - [Manually Registering the MCP Server](#manually-registering-the-mcp-server)
- [AI Guidelines](#ai-guidelines)
    - [Available AI Guidelines](#available-ai-guidelines)
    - [Adding Custom AI Guidelines](#adding-custom-ai-guidelines)
    - [Overriding Boost AI Guidelines](#overriding-boost-ai-guidelines)
    - [Third-Party Package AI Guidelines](#third-party-package-ai-guidelines)
- [Agent Skills](#agent-skills)
    - [Available Skills](#available-skills)
    - [Custom Skills](#custom-skills)
    - [Overriding Skills](#overriding-skills)
    - [Third-Party Package Skills](#third-party-package-skills)
- [Guidelines vs. Skills](#guidelines-vs-skills)
- [Documentation API](#documentation-api)
- [Extending Boost](#extending-boost)
    - [Adding Support for Other IDEs / AI Agents](#adding-support-for-other-ides-ai-agents)

<a name="introduction"></a>
<!-- ## Introduction -->
## Introduction

<!-- Laravel Boost accelerates AI-assisted development by providing the essential guidelines and agent skills that help AI agents write high-quality Laravel applications that adhere to Laravel best practices. -->
Laravel Boost は、AI エージェントが Laravel のベストプラクティスに準拠した高品質の Laravel アプリケーションを作成するのに役立つ重要なガイドラインとエージェント スキルを提供することで、AI 支援開発を加速します。

<!-- Boost also provides a powerful Laravel ecosystem documentation API that combines a built-in MCP tool with an extensive knowledge base containing over 17,000 pieces of Laravel-specific information, all enhanced by semantic search capabilities using embeddings for precise, context-aware results. Boost instructs AI agents like Claude Code and Cursor to use this API to learn about the latest Laravel features and best practices. -->
Boost は、組み込みの MCP ツールと、17,000 を超える Laravel 固有の情報を含む広範なナレッジ ベースを組み合わせた強力な Laravel エコシステム ドキュメント API も提供します。これらはすべて、正確でコンテキストを認識した結果を得るために埋め込みを使用したセマンティック検索機能によって強化されています。 Boost は、Claude Code や Cursor などの AI エージェントに、この API を使用して最新の Laravel 機能とベストプラクティスについて学習するように指示します。

<a name="installation"></a>
<!-- ## Installation -->
## Installation

<!-- Laravel Boost can be installed via Composer: -->
Laravel Boost は Composer 経由でインストールできます。

```shell
composer require laravel/boost --dev
```

<!-- Next, install the MCP server and coding guidelines: -->
次に、MCP サーバーとコーディング ガイドラインをインストールします。

```shell
php artisan boost:install
```

<!-- The `boost:install` command will generate the relevant agent guideline and skill files for the coding agents you selected during the installation process. -->
`boost:install` コマンドは、インストール プロセス中に選択したコーディング エージェントに関連するエージェント ガイドラインとスキル ファイルを生成します。

<!-- Once Laravel Boost has been installed, you're ready to start coding with Cursor, Claude Code, or your AI agent of choice. -->
Laravel Boost がインストールされたら、Cursor、Claude Code、または選択した AI エージェントを使用してコーディングを開始する準備が整います。

> [!NOTE]
> 生成された MCP 構成ファイル (`.mcp.json`)、ガイドライン ファイル (`CLAUDE.md`、`AGENTS.md`、`junie/` など)、および `boost.json` 構成ファイルをアプリケーションの `.gitignore` に自由に追加してください。これらのファイルは、`boost:install` および `boost:update` の実行時に自動的に再生成されます。

<a name="set-up-your-agents"></a>
<!-- ### Set Up Your Agents -->
### Set Up Your Agents

```text tab=Cursor
1. Open the command palette (`Cmd+Shift+P` or `Ctrl+Shift+P`)
2. Press `enter` on "/open MCP Settings"
3. Turn the toggle on for `laravel-boost`
```

```text tab=Claude Code
Claude Code support is typically enabled automatically. If you find it isn't, open a shell in the project's directory and run the following command:

claude mcp add -s local -t stdio laravel-boost php artisan boost:mcp
```

```text tab=Codex
Codex support is typically enabled automatically. If you find it isn't, open a shell in the project's directory and run the following command:

codex mcp add laravel-boost -- php "artisan" "boost:mcp"
```

```text tab=Gemini CLI
Gemini CLI support is typically enabled automatically. If you find it isn't, open a shell in the project's directory and run the following command:

gemini mcp add -s project -t stdio laravel-boost php artisan boost:mcp
```

```text tab=GitHub Copilot (VS Code)
1. Open the command palette (`Cmd+Shift+P` or `Ctrl+Shift+P`)
2. Press `enter` on "MCP: List Servers"
3. Arrow to `laravel-boost` and press `enter`
4. Choose "Start server"
```

```text tab=Junie
1. Press `shift` twice to open the command palette
2. Search "MCP Settings" and press `enter`
3. Check the box next to `laravel-boost`
4. Click "Apply" at the bottom right
```

<a name="keeping-boost-resources-updated"></a>
<!-- ### Keeping Boost Resources Updated -->
### Keeping Boost Resources Updated

<!-- You may want to periodically update your local Boost resources (AI guidelines and skills) to ensure they reflect the latest versions of the Laravel ecosystem packages you have installed. To do so, you can use the `boost:update` Artisan command. -->
ローカルの Boost リソース (AI ガイドラインとスキル) を定期的に更新して、インストールした Laravel エコシステム パッケージの最新バージョンが確実に反映されるようにすることをお勧めします。これを行うには、`boost:update` Artisan コマンドを使用します。

```shell
php artisan boost:update
```

<!-- You may also automate this process by adding it to your Composer "post-update-cmd" scripts: -->
Composer の「post-update-cmd」スクリプトにこのプロセスを追加することで、このプロセスを自動化することもできます。

```json
{
  "scripts": {
    "post-update-cmd": [
      "@php artisan boost:update --ansi"
    ]
  }
}
```

<a name="mcp-server"></a>
<!-- ## MCP Server -->
## MCP Server

<!-- Laravel Boost provides an MCP (Model Context Protocol) server that exposes tools for AI agents to interact with your Laravel application. These tools give agents the ability to inspect your application's structure, query the database, execute code, and more. -->
Laravel Boost は、AI エージェントが Laravel アプリケーションと対話するためのツールを公開する MCP (Model Context Protocol) サーバーを提供します。これらのツールを使用すると、エージェントはアプリケーションの構造の検査、データベースのクエリ、コードの実行などを行うことができます。

<a name="available-mcp-tools"></a>
<!-- ### Available MCP Tools -->
### Available MCP Tools

| 名前                 | 注意事項                                                                                                       |
| -------------------- | ----------------------------------------------------------------------------------------------------------- |
| アプリケーション情報     | PHP と Laravel のバージョン、データベース エンジン、エコシステム パッケージのバージョンと Eloquent モデルのリストを読む |
| ブラウザログ         | ブラウザからログとエラーを読み取る                                                                       |
| データベース接続 | デフォルト接続を含む、利用可能なデータベース接続を検査する                                    |
| データベースクエリ       | データベースに対してクエリを実行する                                                                        |
| データベーススキーマ      | データベーススキーマを読み取る                                                                                    |
| 絶対URLの取得     | エージェントが有効な URL を生成できるように、相対パス URI を絶対パスに変換します                                        |
| 最後のエラー           | アプリケーションのログ ファイルから最後のエラーを読み取ります                                                        |
| ログエントリの読み取り     | 最新の N 個のログ エントリを読み取る                                                                                 |
| ドキュメントの検索          | Laravel でホストされているドキュメント API サービスにクエリを実行して、インストールされているパッケージに基づいてドキュメントを取得します    |

<a name="manually-registering-the-mcp-server"></a>
<!-- ### Manually Registering the MCP Server -->
### Manually Registering the MCP Server

<!-- Sometimes you may need to manually register the Laravel Boost MCP server with your editor of choice. You should register the MCP server using the following details: -->
場合によっては、選択したエディターに Laravel Boost MCP サーバーを手動で登録する必要がある場合があります。次の詳細を使用して MCP サーバーを登録する必要があります。

<!--
<table>
<tr><td><strong>Command</strong></td><td><code>php</code></td></tr>
<tr><td><strong>Args</strong></td><td><code>artisan boost:mcp</code></td></tr>
</table>
-->
<table>
<tr><td><strong>コマンド</strong></td><td><code>php</code></td></tr>
<tr><td><strong>引数</strong></td><td><code>artisan boost:mcp</code></td></tr>
</table>

<!-- JSON example: -->
JSON の例:

```json
{
    "mcpServers": {
        "laravel-boost": {
            "command": "php",
            "args": ["artisan", "boost:mcp"]
        }
    }
}
```

<a name="ai-guidelines"></a>
<!-- ## AI Guidelines -->
## AI Guidelines

<!-- AI guidelines are composable instruction files that are loaded upfront to provide AI agents with essential context about Laravel ecosystem packages. These guidelines contain core conventions, best practices, and framework-specific patterns that help agents generate consistent, high-quality code. -->
AI ガイドラインは、AI エージェントに Laravel エコシステム パッケージに関する重要なコンテキストを提供するために、事前にロードされる構成可能な命令ファイルです。これらのガイドラインには、エージェントが一貫した高品質のコードを生成するのに役立つ、中心的な規則、ベスト プラクティス、およびフレームワーク固有のパターンが含まれています。

<a name="available-ai-guidelines"></a>
<!-- ### Available AI Guidelines -->
### Available AI Guidelines

<!-- Laravel Boost includes AI guidelines for the following packages and frameworks. The `core` guidelines provide generic, generalized advice to the AI for the given package that is applicable across all versions. -->
Laravel Boost には、次のパッケージとフレームワークの AI ガイドラインが含まれています。 `core` ガイドラインは、すべてのバージョンに適用できる、特定のパッケージに対する AI への一般的なアドバイスを提供します。

| パッケージ           | サポートされているバージョン     |
| ----------------- | ---------------------- |
| Core & Boost      | core                   |
| Laravel Framework | core、10.x、11.x、12.x |
| Livewire          | core、2.x、3.x、4.x    |
| Flux UI           | core、free、pro        |
| Folio             | core                   |
| Herd              | core                   |
| Inertia Laravel   | core、1.x、2.x、3.x    |
| Inertia React     | core、1.x、2.x、3.x    |
| Inertia Vue       | core、1.x、2.x、3.x    |
| Inertia Svelte    | core、1.x、2.x、3.x    |
| MCP               | core                   |
| Pennant           | core                   |
| Pest              | core、3.x、4.x         |
| PHPUnit           | core                   |
| Pint              | core                   |
| Sail              | core                   |
| Tailwind CSS      | core、3.x、4.x         |
| Livewire Volt     | core                   |
| Wayfinder         | core                   |
| Enforce Tests     | conditional            |

> **注:** AI ガイドラインを最新の状態に保つには、[Keeping Boost Resources Updated](#keeping-boost-resources-updated) セクションを参照してください。

<a name="adding-custom-ai-guidelines"></a>
<!-- ### Adding Custom AI Guidelines -->
### Adding Custom AI Guidelines

<!-- To augment Laravel Boost with your own custom AI guidelines, add `.blade.php` or `.md` files to your application's `.ai/guidelines/*` directory. These files will automatically be included with Laravel Boost's guidelines when you run `boost:install`. -->
独自のカスタム AI ガイドラインで Laravel Boost を拡張するには、`.blade.php` または `.md` ファイルをアプリケーションの `.ai/guidelines/*` ディレクトリに追加します。これらのファイルは、`boost:install` を実行すると、Laravel Boost のガイドラインに自動的に組み込まれます。

<a name="overriding-boost-ai-guidelines"></a>
<!-- ### Overriding Boost AI Guidelines -->
### Overriding Boost AI Guidelines

<!-- You can override Boost's built-in AI guidelines by creating your own custom guidelines with matching file paths. When you create a custom guideline that matches an existing Boost guideline path, Boost will use your custom version instead of the built-in one. -->
一致するファイル パスを使用して独自のカスタム ガイドラインを作成することで、Boost の組み込み AI ガイドラインをオーバーライドできます。既存の Boost ガイドライン パスに一致するカスタム ガイドラインを作成すると、Boost は組み込みバージョンの代わりにカスタム バージョンを使用します。

<!-- For example, to override Boost's "Inertia React v2 Form Guidance" guidelines, create a file at `.ai/guidelines/inertia-react/2/forms.blade.php`. When you run `boost:install`, Boost will include your custom guideline instead of the default one. -->
たとえば、Boost の「Inertia React v2 Form Guide」ガイドラインをオーバーライドするには、`.ai/guidelines/inertia-react/2/forms.blade.php` にファイルを作成します。 `boost:install` を実行すると、Boost にはデフォルトのガイドラインの代わりにカスタム ガイドラインが含まれます。

<a name="third-party-package-ai-guidelines"></a>
<!-- ### Third-Party Package AI Guidelines -->
### Third-Party Package AI Guidelines

<!-- If you maintain a third-party package and would like Boost to include AI guidelines for it, you can do so by adding a `resources/boost/guidelines/core.blade.php` file to your package. When users of your package run `php artisan boost:install`, Boost will automatically load your guidelines. -->
サードパーティのパッケージを管理しており、Boost にそのパッケージの AI ガイドラインを含めたい場合は、`resources/boost/guidelines/core.blade.php` ファイルをパッケージに追加することで実現できます。パッケージのユーザーが `php artisan boost:install` を実行すると、Boost は自動的にガイドラインをロードします。

<!-- AI guidelines should provide a short overview of what your package does, outline any required file structure or conventions, and explain how to create or use its main features (with example commands or code snippets). Keep them concise, actionable, and focused on best practices so AI can generate correct code for your users. Here is an example: -->
AI ガイドラインでは、パッケージが何を行うのかについての簡単な概要を提供し、必要なファイル構造や規則の概要を示し、その主な機能の作成方法や使用方法を (コマンド例やコード スニペットを使用して) 説明する必要があります。 AI がユーザー向けに正しいコードを生成できるように、簡潔で実用的でベスト プラクティスに焦点を当てたものにしてください。以下に例を示します。

```php
## Package Name

This package provides [brief description of functionality].

### Features

- Feature 1: [clear & short description].
- Feature 2: [clear & short description]. Example usage:

@verbatim
<code-snippet name="How to use Feature 2" lang="php">
$result = PackageName::featureTwo($param1, $param2);
</code-snippet>
@endverbatim
```

<a name="agent-skills"></a>
<!-- ## Agent Skills -->
## Agent Skills

<!-- [Agent Skills](https://agentskills.io/home) are lightweight, targeted knowledge modules that agents can activate on-demand when working on specific domains. Unlike guidelines, which are loaded upfront, skills allow detailed patterns and best practices to be loaded only when relevant, reducing context bloat and improving the relevance of AI-generated code. -->
[Agent Skills](https://agentskills.io/home) は、エージェントが特定のドメインで作業するときにオンデマンドでアクティブ化できる軽量の対象を絞ったナレッジ モジュールです。事前に読み込まれるガイドラインとは異なり、スキルを使用すると、関連する場合にのみ詳細なパターンとベスト プラクティスを読み込むことができるため、コンテキストの肥大化が軽減され、AI によって生成されたコードの関連性が向上します。

<!-- When you run `boost:install` and select skills as a feature, skills are automatically installed based on the packages detected in your `composer.json`. For example, if your project includes `livewire/livewire`, the `livewire-development` skill will be installed automatically. -->
`boost:install` を実行し、機能としてスキルを選択すると、`composer.json` で検出されたパッケージに基づいてスキルが自動的にインストールされます。たとえば、プロジェクトに `livewire/livewire` が含まれている場合、`livewire-development` スキルが自動的にインストールされます。

<a name="available-skills"></a>
<!-- ### Available Skills -->
### Available Skills

| スキル                      | パッケージ        |
| -------------------------- | -------------- |
| fluxui-development         | Flux UI        |
| folio-routing              | Folio          |
| inertia-react-development  | Inertia React  |
| inertia-svelte-development | Inertia Svelte |
| inertia-vue-development    | Inertia Vue    |
| livewire-development       | Livewire       |
| mcp-development            | MCP            |
| pennant-development        | Pennant        |
| pest-testing               | Pest           |
| tailwindcss-development    | Tailwind CSS   |
| volt-development           | Volt           |
| wayfinder-development      | Wayfinder      |

> **注:** スキルを最新の状態に保つには、[Keeping Boost Resources Updated](#keeping-boost-resources-updated) セクションを参照してください。

<a name="custom-skills"></a>
<!-- ### Custom Skills -->
### Custom Skills

<!-- To create your own custom skills, add a `SKILL.md` file to your application's `.ai/skills/{skill-name}/` directory. When you run `boost:update`, your custom skills will be installed alongside Boost's built-in skills. -->
独自のカスタム スキルを作成するには、`SKILL.md` ファイルをアプリケーションの `.ai/skills/{skill-name}/` ディレクトリに追加します。 `boost:update` を実行すると、カスタム スキルが Boost の組み込みスキルと一緒にインストールされます。

<!-- For example, to create a custom skill for your application's domain logic: -->
たとえば、アプリケーションのドメイン ロジックのカスタム スキルを作成するには、次のようにします。

```
.ai/skills/creating-invoices/SKILL.md
```

<a name="overriding-skills"></a>
<!-- ### Overriding Skills -->
### Overriding Skills

<!-- You can override Boost's built-in skills by creating your own custom skills with matching names. When you create a custom skill that matches an existing Boost skill name, Boost will use your custom version instead of the built-in one. -->
一致する名前を持つ独自のカスタム スキルを作成することで、Boost の組み込みスキルをオーバーライドできます。既存の Boost スキル名と一致するカスタム スキルを作成すると、Boost は組み込みバージョンの代わりにカスタム バージョンを使用します。

<!-- For example, to override Boost's `livewire-development` skill, create a file at `.ai/skills/livewire-development/SKILL.md`. When you run `boost:update`, Boost will include your custom skill instead of the default one. -->
たとえば、Boost の `livewire-development` スキルをオーバーライドするには、`.ai/skills/livewire-development/SKILL.md` にファイルを作成します。 `boost:update` を実行すると、Boost にはデフォルトのスキルの代わりにカスタム スキルが含まれます。

<a name="third-party-package-skills"></a>
<!-- ### Third-Party Package Skills -->
### Third-Party Package Skills

<!-- If you maintain a third-party package and would like Boost to include skills for it, you can do so by adding a `resources/boost/skills/{skill-name}/SKILL.md` file to your package. When users of your package run `php artisan boost:install`, Boost will automatically install your skills based on user preference. -->
サードパーティのパッケージを管理しており、Boost にそのパッケージのスキルを含めたい場合は、`resources/boost/skills/{skill-name}/SKILL.md` ファイルをパッケージに追加することで実現できます。パッケージのユーザーが `php artisan boost:install` を実行すると、Boost はユーザーの設定に基づいてスキルを自動的にインストールします。

<!-- Boost Skills support the [Agent Skills format](https://agentskills.io/what-are-skills) and should be structured as a folder containing a `SKILL.md` file with YAML frontmatter and Markdown instructions. The `SKILL.md` file must include required frontmatter (`name` and `description`) and can optionally include scripts, templates, and reference materials. -->
Boost Skills は [Agent Skills format](https://agentskills.io/what-are-skills) をサポートしており、YAML フロントマッターと Markdown 命令を含む `SKILL.md` ファイルを含むフォルダーとして構造化する必要があります。 `SKILL.md` ファイルには、必要なフロントマター (`name` および `description`) が含まれている必要があり、オプションでスクリプト、テンプレート、および参考資料を含めることができます。

<!-- Skills should outline any required file structure or conventions, and explain how to create or use its main features (with example commands or code snippets). Keep them concise, actionable, and focused on best practices so AI can generate correct code for your users: -->
スキルは、必要なファイル構造または規則の概要を説明し、その主な機能の作成方法または使用方法を (コマンド例またはコード スニペットを使用して) 説明する必要があります。 AI がユーザー向けに正しいコードを生成できるように、簡潔で実用的でベスト プラクティスに焦点を当てたものにしてください。

```markdown
---
name: package-name-development
description: Build and work with PackageName features, including components and workflows.
---

# Package Name Development

## When to use this skill
Use this skill when working with PackageName features...

## Features

- Feature 1: [clear & short description].
- Feature 2: [clear & short description]. Example usage:

$result = PackageName::featureTwo($param1, $param2);
```

<a name="guidelines-vs-skills"></a>
<!-- ## Guidelines vs. Skills -->
## Guidelines vs. Skills

<!-- Laravel Boost provides two distinct ways to give AI agents context about your application: **guidelines** and **skills**. -->
Laravel Boost は、AI エージェントにアプリケーションに関するコンテキストを提供する 2 つの異なる方法、**ガイドライン** と **スキル**を提供します。

<!-- **Guidelines** are loaded upfront when the AI agent starts, providing essential context about Laravel conventions and best practices that apply broadly across your codebase. -->
**ガイドライン**は、AI エージェントの起動時に事前に読み込まれ、コードベース全体に広く適用される Laravel の規則とベスト プラクティスに関する重要なコンテキストを提供します。

<!-- **Skills** are activated on-demand when working on specific tasks, containing detailed patterns for particular domains (like Livewire components or Pest tests). Loading skills only when relevant reduces context bloat and improves code quality. -->
**スキル**は、特定のドメイン (Livewire コンポーネントや Pest テストなど) の詳細なパターンを含む特定のタスクに取り組むときにオンデマンドでアクティブ化されます。関連する場合にのみスキルを読み込むことで、コンテキストの肥大化が軽減され、コードの品質が向上します。

| 側面      | ガイドライン                        | スキル                           |
| ----------- | --------------------------------- | -------------------------------- |
| **ロード済み**  | 事前に、常に存在する           | 必要に応じてオンデマンドで         |
| **範囲**   | 幅広く、基礎的な               | 焦点を絞った、特定のタスクに特化した           |
| **目的** | 中心となる規約とベストプラクティス | 詳細な実装パターン |

<a name="documentation-api"></a>
<!-- ## Documentation API -->
## Documentation API

<!-- Laravel Boost includes a Documentation API that provides AI agents with access to an extensive knowledge base containing over 17,000 pieces of Laravel-specific information. The API uses semantic search with embeddings to deliver precise, context-aware results. -->
Laravel Boost には、17,000 を超える Laravel 固有の情報を含む広範なナレッジ ベースへのアクセスを AI エージェントに提供するドキュメント API が含まれています。 API は、埋め込みを使用したセマンティック検索を使用して、正確でコンテキストを認識した結果を提供します。

<!-- The `Search Docs` MCP tool allows agents to query the Laravel hosted documentation API service to retrieve documentation based on your installed packages. Boost's AI guidelines and skills will automatically instruct your coding agent to use this API. -->
`Search Docs` MCP ツールを使用すると、エージェントは Laravel でホストされているドキュメント API サービスにクエリを実行し、インストールされているパッケージに基づいてドキュメントを取得できます。 Boost の AI ガイドラインとスキルは、コーディング エージェントにこの API を使用するように自動的に指示します。

| パッケージ           | サポートされているバージョン |
| ----------------- | ------------------ |
| Laravel Framework | 10.x、11.x、12.x   |
| Filament          | 2.x、3.x、4.x、5.x |
| Flux UI           | 2.x Free、2.x Pro  |
| Inertia           | 1.x、2.x           |
| Livewire          | 1.x、2.x、3.x、4.x |
| Nova              | 4.x、5.x           |
| Pest              | 3.x、4.x           |
| Tailwind CSS      | 3.x、4.x           |

<a name="extending-boost"></a>
<!-- ## Extending Boost -->
## Extending Boost

<!-- Boost works with many popular IDEs and AI agents out of the box. If your coding tool isn't supported yet, you can create your own agent and integrate it with Boost. -->
Boost は、多くの人気のある IDE および AI エージェントでそのまま動作します。コーディング ツールがまだサポートされていない場合は、独自のエージェントを作成して Boost と統合できます。

<a name="adding-support-for-other-ides-ai-agents"></a>
<!-- ### Adding Support for Other IDEs / AI Agents -->
### Adding Support for Other IDEs / AI Agents

<!-- To add support for a new IDE or AI agent, create a class that extends `Laravel\Boost\Install\Agents\Agent` and implement one or more of the following contracts depending on what you need: -->
新しい IDE または AI エージェントのサポートを追加するには、`Laravel\Boost\Install\Agents\Agent` を拡張するクラスを作成し、必要に応じて次の 1 つ以上のコントラクトを実装します。

<!--
- `Laravel\Boost\Contracts\SupportsGuidelines` - Adds support for AI guidelines.
- `Laravel\Boost\Contracts\SupportsMcp` - Adds support for MCP.
- `Laravel\Boost\Contracts\SupportsSkills` - Adds support for Agent Skills.
-->
- `Laravel\Boost\Contracts\SupportsGuidelines` - AI ガイドラインのサポートを追加します。
- `Laravel\Boost\Contracts\SupportsMcp` - MCP のサポートを追加します。
- `Laravel\Boost\Contracts\SupportsSkills` - エージェント スキルのサポートを追加します。

<a name="writing-the-agent"></a>
<!-- #### Writing the Agent -->
#### Writing the Agent

```php
<?php

declare(strict_types=1);

namespace App;

use Laravel\Boost\Contracts\SupportsGuidelines;
use Laravel\Boost\Contracts\SupportsMcp;
use Laravel\Boost\Contracts\SupportsSkills;
use Laravel\Boost\Install\Agents\Agent;

class CustomAgent extends Agent implements SupportsGuidelines, SupportsMcp, SupportsSkills
{
    // Your implementation...
}
```

<!-- For an example implementation, see [ClaudeCode.php](https://github.com/laravel/boost/blob/main/src/Install/Agents/ClaudeCode.php). -->
実装例については、[ClaudeCode.php](https://github.com/laravel/boost/blob/main/src/Install/Agents/ClaudeCode.php) を参照してください。

<a name="registering-the-agent"></a>
<!-- #### Registering the Agent -->
#### Registering the Agent

<!-- Register your custom agent in the `boot` method of your application's `App\Providers\AppServiceProvider`: -->
アプリケーションの `App\Providers\AppServiceProvider` の `boot` メソッドにカスタム エージェントを登録します。

```php
use Laravel\Boost\Boost;

public function boot(): void
{
    Boost::registerAgent('customagent', CustomAgent::class);
}
```

<!-- Once registered, your agent will be available for selection when running `php artisan boost:install`. -->
登録すると、`php artisan boost:install` を実行するときにエージェントを選択できるようになります。

